api/config/base/ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    app: korifi-api
  name: proxy
spec:
  virtualhost:
    fqdn: API_URL
    tls:
      secretName: korifi-api-ingress-cert
  routes:
  - conditions:
    - prefix: /
    services:
    - name: korifi-api-svc
      port: 443
      validation:
        caSecret: korifi-api-backplane-ca
        subjectName: cf-k8s-api-svc.cf-k8s-api-system.service.cluster.local
    timeoutPolicy:
      response: "5m"
